GL/concurrent-systems-exercises/01_kubernetes/11_statefulset.yaml
# PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: concsys-22-usr-simon-barras
spec:
  serviceName: postgresql-db-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresql-db
          image: postgres:latest
          resources:
            limits:
              cpu: "0.5"
              memory: "100Mi"
          volumeMounts:
            - name: postgresql-db-disk
              mountPath: /data

  volumeClaimTemplates:
      - metadata:
          name: postgresql-db-disk
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 1Gi
