GL/concurrent-systems-exercises/01_kubernetes/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: concsys-22-usr-simon-barras
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
