GL/concurrent-systems-exercises/01_kubernetes/my-fibonacci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci
  namespace: concsys-22-usr-simon-barras
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fibonacci
  template:
    metadata:
      labels:
        app: fibonacci
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: registry.forge.hefr.ch/simon.barras/concurrent-systems-exercises/tp01-kubernetes:latest
          imagePullPolicy: Always
          name: fibonacci
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.3"
            limits:
              memory: "128Mi"
              cpu: "0.5"
          livenessProbe:
            httpGet:
              path: /api/v1/fibonacci/1
              port: 8080
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/fibonacci/1
              port: 8080
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 1
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci
  namespace: concsys-22-usr-simon-barras
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: fibonacci
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibonacci
  namespace: concsys-22-usr-simon-barras
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: fibonacci.concsys-22-usr-simon-barras.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fibonacci
                port:
                  number: 80
